force-app/main/default/objects/Payment_schedule__c/Payment_schedule__c.object-meta.xml
<CustomObject>
    <label>Payment schedule</label>
    <nameField>
        <label>Payment schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>