force-app/main/default/objects/Payment_schedule__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>amount</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>