force-app/main/default/objects/Payment_schedule__c/fields/AmountB__c.field-meta.xml
<CustomField>
    <fullName>AmountB__c</fullName>
    <description>Payment_percent__c *  Booking__r.Total__c</description>
    <formula>Cost_Sheet__r.Grand_Total__c  * Payment_percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>