force-app/main/default/objects/Payment_schedule__c/fields/Interest_A__c.field-meta.xml
<CustomField>
    <fullName>Interest_A__c</fullName>
    <description>Sum of Total Interest Amount form Interest Line item</description>
    <label>Interest from IL</label>
    <summarizedField>Interest_Amount_Line_Item__c.Total_Interest_Amount__c</summarizedField>
    <summaryForeignKey>Interest_Amount_Line_Item__c.Payment_Schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>