force-app/main/default/objects/Payment_schedule__c/fields/Interest_Amount__c.field-meta.xml
<CustomField>
    <fullName>Interest_Amount__c</fullName>
    <formula>/*If( Include_Interest__c ,if(Payment_Due_Date__c &lt; TODAY() &amp;&amp;  ISBLANK(Last_Payment_Date__c),
			(Pending_Amount__c *  Interest_Percent__c * (TODAY() - Payment_Due_Date__c))/365 ,
			if(Last_Payment_Date__c &lt; TODAY() &amp;&amp; !ISBLANK(Last_Payment_Date__c),
						(Pending_Amount__c *  Interest_Percent__c * (TODAY() - Last_Payment_Date__c))/365, 0.0)),0)*/

IF(
				Include_Interest__c,
				IF(
								!ISBLANK(Payment_Due_Date__c) &amp;&amp; Payment_Due_Date__c &lt; TODAY(),
								 MAX(((Pending_Amount__c * Interest_Percent__c * (TODAY() - Payment_Due_Date__c)) / 365),0),0),0) 

								/*IF(
												ISBLANK(Payment_Due_Date__c) &amp;&amp; !ISBLANK(Demand_Date__c) &amp;&amp; Demand_Date__c,
												IF(
																!ISBLANK(Interest_Change_Date__c) &amp;&amp; Interest_Change_Date__c &gt; Last_Payment_Date__c,
																(Pending_Amount__c * Interest_Percent__c * (TODAY() - Interest_Change_Date__c)) / 365,
																(Pending_Amount__c * Interest_Percent__c * (TODAY() - Last_Payment_Date__c)) / 365
												),
												0.0
								)
				),
				0
)*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interest Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>