force-app/main/default/objects/Payment_schedule__c/fields/Interest_Paid__c.field-meta.xml
<CustomField>
    <fullName>Interest_Paid__c</fullName>
    <label>Interest Paid (From RL)</label>
    <summarizedField>Receipt_Line_Item__c.Received_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Receipt_Line_Item__c.Payment_Type__c</field>
        <operation>equals</operation>
        <value>Interest</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Receipt_Line_Item__c.Approval_Status__c</field>
        <operation>notEqual</operation>
        <value>Rejected by Finance Team</value>
    </summaryFilterItems>
    <summaryForeignKey>Receipt_Line_Item__c.Payment_schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>