force-app/main/default/objects/Payment_schedule__c/fields/Received_Amount1__c.field-meta.xml
<CustomField>
    <fullName>Received_Amount1__c</fullName>
    <label>Received Amount through Receipts</label>
    <summarizedField>Receipt_Line_Item__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Receipt_Line_Item__c.Approval_Status__c</field>
        <operation>notEqual</operation>
        <value>Rejected by Finance Team</value>
    </summaryFilterItems>
    <summaryForeignKey>Receipt_Line_Item__c.Payment_schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>