force-app/main/default/objects/Payment_schedule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Booking__c</columns>
    <columns>Is_Demanded__c</columns>
    <columns>status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>